--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "@expo/metro-runtime": "~3.1.3"
   }
 }
