--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "expo export:web"
+    "build": "expo export"
   },
   "dependencies": {
     "expo": "~50.0.0",
